crates/swc_ecma_parser/tests/test262-error-references/fail/ab9d14c2ef38f180.js.stderr
error: assignment property is invalid syntax
 --> $DIR/tests/test262-parser/fail/ab9d14c2ef38f180.js:1:6
  |
1 | (0, {a = 0}) = 0
  |      ^^^^^

error: The left-hand side of an assignment expression must be a variable or a property access.
 --> $DIR/tests/test262-parser/fail/ab9d14c2ef38f180.js:1:1
  |
1 | (0, {a = 0}) = 0
  | ^^^^^^^^^^^^
